# IntegrationRetellAI

./: .gitignore  README.md
.github/workflows/: pre-commit.yml
AdminPage/: .bandit  .dockerignore  .env.example  .flake8  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  gunicorn-conf.py  local_migrate.py  pyproject.toml  pytest.ini  ruff.toml  server.py  whitelist.txt
AdminPage/.github/workflows/: pre-commit.yml
AdminPage/admin_page/: __init__.py  app.py  exceptions.py  utilities.py
AdminPage/admin_page/forms/base/: login.py
AdminPage/admin_page/migrations/: env.py
AdminPage/admin_page/migrations/versions/: 3ea25af192f5_init.py
AdminPage/admin_page/models/admin_page/: __init__.py  base.py  permission.py  roles.py  users.py
AdminPage/admin_page/models/user_manager/: __init__.py  balance.py  balance_adjustment.py  base.py  call.py  tenant.py  user.py
AdminPage/admin_page/schemes/: accreditation.py  base.py  company.py  fireblocks.py  internal.py  sqs.py
AdminPage/admin_page/settings/: conf.py  constants.py  db.py  login.py
AdminPage/admin_page/templates/: master.html
AdminPage/admin_page/templates/admin/: clients_summary.html  index.html
AdminPage/admin_page/views/admin_page/: permission.py  roles.py  users.py
AdminPage/admin_page/views/aggregation/: summary.py
AdminPage/admin_page/views/base/: admin.py  base_model.py  permissions_view.py
AdminPage/admin_page/views/user_manager/: balance.py  balance_adjustment.py  call.py  tenant.py  users.py
Frontend/: package.json  tsconfig.app.json
UserManager/: .bandit  .dockerignore  .env.example  .flake8  .mypy.ini  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  gunicorn-conf.py  pyproject.toml  ruff.toml  server.py  whitelist.txt
UserManager/user_manager/: __init__.py  app.py  exception_handlers.py  middlewares.py  (+1 more)
frontend/: package-lock.json
(+54 files in other folders)
