[tool.poetry]
name = "admin_page"
version = "1.0.0"
description = "Admin Page"
authors = []
license = ""

[tool.poetry.dependencies]
python = "==3.12.4"
uvicorn = "==0.30.1"
toml = "==0.10.2"
pydantic-settings = "==2.4.0"
sentry-sdk = "==2.8.0"
python-json-logger = "==2.0.7"
gunicorn = "==22.0.0"
asyncpg = "==0.29.0"
psycopg2-binary = "==2.9.9"
itsdangerous = "==2.2.0"
boto3 = "==1.34.133"
pyjwt = "==2.8.0"
cryptography = "==42.0.8"
flask-admin = { extras = ["sqlalchemy"], version = "==1.6.1" }
flask = "==3.0.3"
flask-sqlalchemy = "==3.1.1"
flask-login = "==0.6.3"
flask-wtf = "^1.2"
ujson = "==5.10.0"
starlette = "==0.41.0"
WTForms = "==3.1.2"
charset-normalizer = "==3.3.2"
greenlet = "==3.0.3"
MarkupSafe = "==2.1.5"
marshmallow = "==3.22.0"
pydantic = "==2.8.2"
SQLAlchemy = "==2.0.32"
Werkzeug = "==3.0.4"
redis = "^5.2.0"
pymongo = "^4.10.1"
httpx = "^0.27.0"
beanie = "^1.25.0"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
ipdb = "==0.13.13"
black = "==23.7.0"
darglint = "==1.8.1"
factory_boy = "==3.3.0"
flake8 = "==6.0.0"
flake8-bandit = "==4.1.1"
flake8-comprehensions = "==3.14.0"
flake8-eradicate = "==1.5.0"
flake8-isort = "==6.0.0"
flake8-spellcheck = "==0.28.0"
bandit = "==1.7.4"
isort = "==5.12.0"
pep8-naming = "==0.13.3"
pre-commit = "==3.3.3"
pre-commit-hooks = "==4.4.0"
safety = "==2.4.0b1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.0"
types-toml = "^0.10.8.20240310"
types-ujson = "^5.10.0.20240515"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120
skip-string-normalization = true
exclude = '''
(
    \.venv
)
'''

[tool.isort]
profile = "black"
force_single_line = true
order_by_type = false
line_length = 120
skip = '.venv'
src_paths = ['admin_page']
